[package]
name = "ucosiii-rs"
description = "A safe, embedded Rust implementation of the μC/OS-III real-time operating system"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AoligeiY/ucosiii-rs"
readme = "README.md"
authors = ["Yangck <yangck125@163.com>"]
keywords = ["rtos", "embedded", "realtime", "ucos", "os"]

[lib]
name = "ucosiii"
path = "src/lib.rs"

[dependencies]
# Cortex-M core support
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"

# Panic handler for embedded
panic-halt = "0.2"

# Critical section implementation
critical-section = { version = "1.2", features = ["restore-state-bool"] }
portable-atomic = { version = "1.6", features = ["critical-section"] }

# STM32F4 HAL (optional, for examples)
stm32f4xx-hal = { version = "0.21", features = ["stm32f401"], optional = true }

# STM32F4 PAC for direct register access
# stm32f4 = { version = "0.15", features = ["stm32f401"], optional = true }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = ["stm32f401re"], optional = true }

defmt = {version = "1.0.1", optional = true}
defmt-rtt = {version = "1.1.0", optional = true}
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true}

[features]
default = ["full", "pac", "memory-x", "defmt"]
full = ["sem", "mutex"]
sem = []
mutex = []
defmt = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe"]
hal = ["dep:stm32f4xx-hal"]
pac = ["dep:stm32-metapac"]
memory-x = ["stm32-metapac/memory-x"]
rt = ["stm32-metapac/rt"]

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = "s"
lto = true
debug = false

# Examples
[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "producer_consumer"
path = "examples/producer_consumer.rs"

[[example]]
name = "priority_inversion"
path = "examples/priority_inversion.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

